syntax = "proto3";

package consensus;

option go_package = "./proto;consensus_proto";

message LogEntry {
    int64 term = 1;
    int64 index = 2;
    string data = 3; 
}

message CriticalResourceState {
    string resource_id = 1;
    string assigned_to_flight = 2;
    int64 last_commit_index = 3;
}

message ProposeRequest {
    string client_id = 1;
    string proposal_data = 2;
}

message ProposeResponse {
    bool success = 1;          
    string message = 2;
    string leader_address = 3;   
    CriticalResourceState new_state = 4;
}

message AppendEntriesRequest {
    string leader_id = 1;
    int64 current_term = 2;        
    int64 prev_log_index = 3;     
    int64 prev_log_term = 4;      
    repeated LogEntry entries = 5; 
    int64 leader_commit = 6;   
}

message AppendEntriesResponse {
    string follower_id = 1;
    int64 current_term = 2;     
    bool success = 3;              
    int64 last_log_index = 4;     
}

message RequestVoteRequest {
    string candidate_id = 1;
    int64 current_term = 2;
    int64 last_log_index = 3;  
    int64 last_log_term = 4;      
}

message RequestVoteResponse {
    string node_id = 1;
    int64 current_term = 2;        
    bool vote_granted = 3;
}

service ConsensusService {

    rpc ProposeAction (ProposeRequest) returns (ProposeResponse);
    rpc AppendEntries (AppendEntriesRequest) returns (AppendEntriesResponse);
    rpc RequestVote (RequestVoteRequest) returns (RequestVoteResponse);
}
